# AlphAction

./: .gitignore  .python-version  CLI_VISUALIZER_SELECTION_COMPLETE.md  ENVIRONMENT_SETUP.md  FINAL_STATUS.md  GPU_VIDEO_ACCELERATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION_VERIFIED.md  INSTALL_UV.md  PYTORCH2_MIGRATION_SUMMARY.md  README.md  RESNET101_TEST_RESULTS.md  THERMAL_QUICK_START.md  THERMAL_README.md  THERMAL_SUMMARY.md  UV_SETUP.md  VISUALIZER_OPTIONS_SUMMARY.md  activate_env.sh  activate_uv_env.sh  pyproject.toml  test_thermal_dataset.py  test_yolo11x_full.py  thermal_quickstart.sh  train_net.py  verify_installation.py
ThermalDataGen/thermal_action_dataset/: dataset_info.json
config_files/: thermal_resnet101_8x8f_baseline.yaml  thermal_resnet101_8x8f_denseserial.yaml  thermal_resnet50_4x16f_baseline.yaml  thermal_resnet50_scratch.yaml
cursor_readme/: AVA_CATEGORIES_ANALYSIS.md  CUDA_EXTENSIONS_FIXED.md  CUSTOM_DATASET_PREPARATION.md  DEMO_DEBUG_SUMMARY.md  DEMO_PREPARATION.md  FAST_VISUALIZER_SUCCESS.md  FINAL_IMPLEMENTATION_REPORT.md  FINETUNING_GUIDE.md  FINETUNING_INDEX.md  FINETUNING_QUICK_REFERENCE.md  FINETUNING_README.md  FINETUNING_TROUBLESHOOTING.md  FINETUNING_WORKFLOW.md  INSTALLATION_SUMMARY.md  MMACTION2_THERMAL_GUIDE.md  NVENC_IMPLEMENTATION_COMPLETE.md  NVENC_VISUALIZER_GUIDE.md  PERFORMANCE_ANALYSIS.md  PILLOW_FIX_SUMMARY.md  QUICKSTART_YOLO11.md  QUICK_START.md  README.md  REFACTORING_COMPLETE.md  SYSTEM_VERIFICATION_COMPLETE.md  TASK_COMPLETE.md  THERMAL_FINETUNING_IMPLEMENTATION_COMPLETE.md  THERMAL_INTEGRATION_COMPLETE.md  THERMAL_SLOWFAST_FINETUNING.md  THERMAL_TRAINING_STATUS.md  UV_MIGRATION_COMPLETE.md  VISUALIZER_CLI_GUIDE.md  YOLO11_ENVIRONMENT_SETUP.md  YOLO11_INTEGRATION_SUMMARY.md  activate_yolo11_env.sh  download_models.sh  finetune_quickstart.sh  run_demo_test.sh  run_demo_yolo11.sh
debug/: debug_training_shapes.py  test_thermal_labels.py
demo/: README.md  custom_task_filter.py  demo.py  fast_visualizer.py  nvenc_visualizer.py  visualizer.py
detector/: apis.py  yolo11_api.py  yolo11_cfg.py
mmaction2_thermal/: __init__.py  test_mmaction_thermal.py  thermal_dataset.py  thermal_slowfast_config.py
tests/: README.md  run_thermal_tests.py  test_thermal_dataset.py  test_thermal_integration.py
tools/: generate_finetune_config.py
unittest/: README.md  test_cuda_extensions.py  test_fast_visualizer.py
(+28 files in other folders)
