[project]
name = "alphaction"
version = "0.1.0"
description = "AlphAction: Spatio-Temporal Action Detection and Localization with YOLOv11x + BoT-SORT"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {text = "MIT"}
authors = [
    {name = "MVIG-SJTU", email = "yelantf@sjtu.edu.cn"},
]
keywords = ["action-detection", "video-analysis", "yolo", "pytorch", "deep-learning"]

dependencies = [
    # Core dependencies
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
    
    # YOLOv11 and tracking
    "ultralytics>=8.3.0",
    
    # Video processing
    "av>=15.0.0",
    "opencv-python>=4.8.0",
    
    # Configuration and utilities
    "yacs>=0.1.8",
    "easydict>=1.10",
    "pyyaml>=6.0",
    
    # Visualization and logging
    "matplotlib>=3.7.0",
    "tensorboardx>=2.6.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
    
    # Scientific computing
    "numpy>=1.24.0,<3.0.0",
    "scipy>=1.10.0",
    
    # Build and compilation
    "cython>=3.0.0",
    "cython-bbox>=0.1.3",
    "ninja>=1.11.0",
    
    # Data handling
    "gdown>=5.0.0",
    
    # Additional utilities
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = [
    "setuptools>=68.0.0",
    "wheel>=0.40.0",
    "cython>=3.0.0",
    "numpy>=1.24.0",
]
build-backend = "setuptools.build_meta"

[tool.uv]
# Use PyTorch CUDA 11.8 index
index-url = "https://download.pytorch.org/whl/cu118"
# Fallback to PyPI for other packages
extra-index-url = ["https://pypi.org/simple"]

[tool.uv.sources]
# Specify PyTorch packages from PyTorch index
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["unittest"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

